@@ -1,3 +1,13 @@
+2007-09-05  Marcus Brinkmann  <marcus@g10code.de>
+
+	* assuan-handler.c (dispatch_command): Return non-critical errors
+	with PROCESS_DONE ().
+
+2007-09-03  Marcus Brinkmann  <marcus@g10code.de>
+
+	* assuan.h [_ASSUAN_EXT_SYM_PREFIX]: Add missing symbol renames
+	with _ASSUAN_PREFIX.
+
 2007-09-03  Marcus Brinkmann  <marcus@g10code.de>
 
 	* assuan.h [_ASSUAN_EXT_SYM_PREFIX]: Add missing symbol renames
